# exchange-api-client

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/exchange_client/: __init__.py  client.py  errors.py
src/exchange_client/adapters/: __init__.py  bitunix.py
tests/: test_bitunix_post_body_signing.py  test_bitunix_private_headers.py  test_bitunix_signing.py  test_public.py
