[project]
name = "exchange-api-client"
version = "0.1.0"
description = "Production-grade cryptocurrency exchange API client with retries, timeouts, tests and CI."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
